Fixed upper container spacing

--- a/src/components/DonateTabs.css
+++ b/src/components/DonateTabs.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     box-sizing: border-box;
     position: relative;
+    margin-right: 20px;
     right: 10px;
     margin-top: 15vh;
     margin-bottom: 70px;
